# ChangeLog for app-emacs/bbdb
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/bbdb/ChangeLog,v 1.30 2007/11/21 07:34:41 ulm Exp $

  21 Nov 2007; Ulrich Mueller <ulm@gentoo.org> bbdb-2.35.ebuild:
  Add tex USE flag, bug #196745. Keep tetex flag for a transition period.

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  -files/bbdb-decode-header.diff, -bbdb-2.35_pre20040323-r1.ebuild:
  clean up

  06 Oct 2007; Ulrich Mueller <ulm@gentoo.org>
  bbdb-2.35_pre20040323-r1.ebuild, bbdb-2.35.ebuild:
  Minor QA: quote some variables. Add pkg_postrm.

  08 Jun 2007; Ulrich Mueller <ulm@gentoo.org>
  -bbdb-2.35_pre20040323.ebuild:
  Remove old version.

  01 Jun 2007; nixnut <nixnut@gentoo.org> bbdb-2.35.ebuild:
  Stable on ppc wrt bug 177921

  20 May 2007; Raúl Porcel <armin76@gentoo.org> bbdb-2.35.ebuild:
  alpha stable wrt #177921

  15 May 2007; Christian Faulhammer <opfer@gentoo.org> bbdb-2.35.ebuild:
  stable amd64; bug 177921

  12 May 2007; Torsten Veller <tove@gentoo.org> bbdb-2.35.ebuild:
  Stable on x86 (#177921)

  11 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> bbdb-2.35.ebuild:
  Stable on sparc wrt #177921

  19 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> bbdb-2.35.ebuild:
  Add ~alpha keyword, bug 168420.

*bbdb-2.35 (27 Mar 2007)

  27 Mar 2007; Christian Faulhammer <opfer@gentoo.org> +bbdb-2.35.ebuild:
  version bump, fixes bugs 172277 and 156038: Removed mailcrypt
  dependency and crypt USE flag; this does not influence the building of
  the package. Always install bbdb-pgp.el.  Added explanation message to
  pkg_postinst.
  Additional die
  handle SITEFILE the normal way
  Thanks to Ulrich Mueller <ulm@kph.uni-mainz.de>

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/50bbdb-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  23 Feb 2007; Christian Faulhammer <opfer@gentoo.org> -bbdb-2.34-r1.ebuild: