@@ -2,6 +2,6 @@ AUX 50bbdb-gentoo.el 151 RMD160 533385f6bf0f17d92d4f0cbfe1a44a4fb2cee6eb SHA1 d9
 DIST bbdb-2.35.tar.gz 393097 RMD160 efa04f4ea1428f591bd20738f8c7d0c5f3a919e8 SHA1 7524dd2b3951b4635c606e673c97b85c9cf0621c SHA256 3fb1316e2ed74d47ca61187fada550e58797467bd9e8ad67343ed16da769f916
 DIST dates.el 7048 RMD160 f8428bf5614031b907fc1395b3d4f3e59345649b SHA1 9ea9095a24dc7f1b09c4173301ef32d412aeeacf SHA256 8de33f7b00ac1766eb104c1bf2f362aff54e3de4d67cbd0a4da1b6b137363ec4
 DIST point-at.el 440 RMD160 139834d869575df5b826e681e37f3d0f769af789 SHA1 f7dcaa6091dd2f89a95293bc6c534630f0461b7c SHA256 c9695455b96f17fbebc9cf0ae21b042fb04b688016279010d87c01e9d270e0c8
-EBUILD bbdb-2.35.ebuild 2446 RMD160 af0ea0d618b8923ed6b8b494c1e4d4a8719ed192 SHA1 9b2c8d8c40e4c7fae665bb16a125066ae698d003 SHA256 a46aac30aa1904222975549434bc1db64419f7b19cba8d79cedc9a1553072e53
-MISC ChangeLog 4131 RMD160 5c403e352c138420bb3d8d8def4a495a42cbc3b5 SHA1 3eaca3cc6541100a1e23e767847418889ee41aa3 SHA256 287e05bed71ae8340f961a5c706cdc59d9ee101a70c527eaa74b8658f16434a1
+EBUILD bbdb-2.35.ebuild 2386 RMD160 37b2dfe79a8a47a19cf32bea0a94bbe795d5cc45 SHA1 53b680cddb05324cc6f3eeafbdf8a7ca25d12370 SHA256 2a4a788e806fe65abce0a7ce94e00092e1e5738517ec4911331900b44ccccfaf
+MISC ChangeLog 4243 RMD160 e9d283e0ae553a30eb7a6b455bd3d0b5f4be3a69 SHA1 c27074713deacfc08b769de8808894e3abbd0e34 SHA256 679b433902e37d91b13bb3ba908a5eaaae6d80731985ccd94d011683bc930b9f
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
