@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/bbdb/bbdb-2.35.ebuild,v 1.9 2007/11/21 07:34:41 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/bbdb/bbdb-2.35.ebuild,v 1.10 2007/11/24 23:30:35 ulm Exp $
 
 EAPI="prefix"
 
@@ -18,9 +18,8 @@ KEYWORDS="~amd64 ~ppc-macos ~sparc-solaris ~x86"
 IUSE="tex tetex"
 
 DEPEND=""
-# We need plain TeX only, but there is no virtual/tex-base
 RDEPEND="${DEPEND}
-	tex? ( virtual/latex-base )
+	tex? ( virtual/tex-base )
 	tetex? ( virtual/tetex )"
 
 SITEFILE=50${PN}-gentoo.el
